--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             const canvasRef = useRef(null);
 
             const quotes = [
+                // 基礎與自我接納
                 "你的獨立很迷人，但適度的依賴，並不代表會失去自我。",
                 "他在尋求確認，不是為了控制你，只是為了確認這段關係還安全。",
                 "你需要空間充電，這沒問題。只要在轉身前，先給他一個具體的歸期。",
@@ -72,7 +73,103 @@
                 "不要等到準備好才去愛，愛是在互動中學會的。",
                 "一句簡單的「我在」，勝過千言萬語的辯解。",
                 "主動報備不是被監控，而是給予信任的邀請函。",
-                "堅強太久會累，允許自己被接住一次吧。"
+                "堅強太久會累，允許自己被接住一次吧。",
+
+                // 關於界線與空間
+                "設立界線時，試著用「我需要」開頭，而不是「你不要」。",
+                "你渴望的「完美的距離」，有時只是用來推開人的藉口。",
+                "空間是為了讓你充飽電回來愛人，而不是用來躲避愛的。",
+                "當你想逃跑時，試著停在原地深呼吸三秒，你會發現危險並不存在。",
+                "你的世界很大，多容納一個人，並不會讓它變得擁擠。",
+                "別把對方的靠近，解讀成對你領土的侵略。",
+                "學會在關係中獨處，比在獨處中渴望關係更需要勇氣。",
+                "告訴他：「我不是不愛你，我只是需要一點時間整理自己。」",
+                "拒絕並不代表你是壞人，溫柔地拒絕更是一種慈悲。",
+                "你不必承擔他所有的情緒，但你可以選擇不忽視。",
+
+                // 關於焦慮型伴侶的視角
+                "他追得緊，是因為他感覺你在後退；你停下來，他就會安心。",
+                "對焦慮型來說，未知的等待是最漫長的刑罰。",
+                "他不是要你的答案，他只是想要你的回應。",
+                "那些你覺得「沒必要說」的小事，往往是他最需要的安全感來源。",
+                "試著把他的訊息看作是愛的敲門聲，而不是討債的帳單。",
+                "他其實比你想像的更懂你的沈默，但他更希望你親口說。",
+                "有時候，一個擁抱就能解決那些邏輯無法解釋的問題。",
+                "別預設他的情緒會淹沒你，你是個熟練的游泳者。",
+                "他的依賴不是軟弱，而是他信任你的表現。",
+                "試著在他開口索取之前，主動給予一點點，你會看到奇蹟。",
+
+                // 關於內在恐懼與療癒
+                "你害怕的不是愛，而是害怕在愛裡失去控制權。",
+                "挑剔對方的缺點，有時只是為了合理化你的疏離。",
+                "別讓「我不適合親密關係」成為你的自我實現預言。",
+                "被愛不代表被束縛，愛也可以是遼闊的草原。",
+                "卸下防備不代表會受傷，它代表你願意真實地活著。",
+                "完美的伴侶不存在，但真實的連結存在於不完美之中。",
+                "你不需要變得完美才值得被愛，現在的你就很好。",
+                "承認自己也需要人陪，並不可恥。",
+                "過去的傷痕是為了提醒你保護自己，而不是為了阻止你擁抱未來。",
+                "相信這一次，你可以改寫結局。",
+
+                // 行動與練習
+                "今天試著多分享一件無關緊要的小事。",
+                "當你覺得煩躁時，誠實地說出來，而不是用冷漠武裝。",
+                "練習說「我們」，而不只是「我」。",
+                "試著直視他的眼睛超過三秒鐘。",
+                "在感到窒息前，先按下暫停鍵，而不是登出鍵。",
+                "不要用邏輯去分析情感，試著用感受去回應感受。",
+                "設定一個「重聚儀式」，讓分開後的重逢充滿期待。",
+                "把「你是個麻煩」的想法，替換成「他在乎這段關係」。",
+                "如果不知道說什麼，就說「我正在聽」。",
+                "允許自己在關係中稍微「失控」一點點。",
+
+                // 極簡冷靜的提醒
+                "冷戰是關係的慢性毒藥。",
+                "已讀不回，是在透支這段關係的存款。",
+                "愛是動詞，不是名詞；是行動，不是感覺。",
+                "不要讓你的獨立，成為一座孤島。",
+                "親密不是融合，而是重疊。",
+                "安全感是雙向流動的。",
+                "被需要，也是一種價值。",
+                "別讓理性扼殺了感性的火花。",
+                "你的溫柔，比你的冷酷更有力量。",
+                "愛，是願意為了對方，稍微走出舒適圈。",
+                
+                // 深入潛意識
+                "你是不是在潛意識裡，期待著他讓你失望，好讓你有理由離開？",
+                "那些你推不開的，也許正是你靈魂深處渴望的。",
+                "別把伴侶投射成當年那個控制你的照顧者。",
+                "現在的你是安全的，你有能力離開，所以你可以選擇留下。",
+                "依戀模式可以改變，只要你願意再一次冒險。",
+                "你值得一段安穩、不需猜忌的關係。",
+                "不要因為害怕結束，而拒絕開始。",
+                "真正的獨立，是擁有隨時依賴他人的能力。",
+                "你的心牆很高，但也請留一扇門。",
+                "看見他的脆弱，也看見你自己的。",
+
+                // 更多實用建議
+                "用「我感覺...」代替指責。",
+                "如果你需要三天冷靜，就別說「晚點回」。",
+                "主動發起的親密，會讓你更有掌控感。",
+                "不是所有的爭執都需要贏。",
+                "給予讚美，是成本最低的投資。",
+                "在關係裡，對錯往往不如感受重要。",
+                "試著去理解他情緒背後的邏輯。",
+                "別把他的關心當作干涉。",
+                "你擁有的愛，比你以為的多。",
+                "相信直覺，但也請懷疑恐懼。",
+
+                // 結語般的溫柔
+                "慢一點沒關係，只要方向是對的。",
+                "這是一場雙人舞，別總是一個人跳。",
+                "去愛吧，像不曾受傷一樣。",
+                "你的存在本身，就是一份禮物。",
+                "給自己一點耐心，也給他一點信心。",
+                "幸福不是運氣，是選擇與練習。",
+                "讓我們在彼此的差異中，找到平衡。",
+                "願你擁有愛人的勇氣，也有被愛的能力。",
+                "不再逃避的那一刻，才是自由的開始。",
+                "家，就是有人在等你回來。"
             ];
 
             useEffect(() => {
